[package]
name = "ckb-cli"
version = "0.100.0-rc5"
license = "MIT"
authors = ["Linfeng Qian <thewawar@gmail.com>", "Nervos Core Dev <dev@nervos.org>"]
edition = "2018"
description = "ckb command line interface"

[dependencies]
ckb-jsonrpc-types = "=0.100.0-rc5"
ckb-hash = "=0.100.0-rc5"
ckb-crypto = { version = "=0.100.0-rc5", features = ["secp"] }
ckb-build-info = "=0.100.0-rc5"
ckb-types = "=0.100.0-rc5"
ckb-util = "=0.100.0-rc5"
ckb-resource = "=0.100.0-rc5"
ckb-dao-utils = "=0.100.0-rc5"
ckb-chain-spec = "=0.100.0-rc5"
ckb-sdk = { path = "ckb-sdk", version = "=0.100.0-rc5" }
ckb-index = { path = "ckb-index", version = "=0.100.0-rc5" }
plugin-protocol = { path = "plugin-protocol", package = "ckb-cli-plugin-protocol", version = "=0.100.0-rc5" }
jsonrpc-core-client = "18"
jsonrpc-core = "18"
jsonrpc-derive = "18"
jsonrpc-http-server = "18"
jsonrpc-server-utils = "18"
secp256k1 = { version = "0.19", features = ["recovery"] }
faster-hex = "0.6"
env_logger = "0.6"
crossbeam-channel = "0.5.1"
clap = "=3.0.0-beta.1"
clap_generate = "=3.0.0-beta.1"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
serde_yaml = "0.8.9"
yaml-rust = "0.4.3"
dtoa = "0.4"
ansi_term = "^0.11.0"
colored = "^1.6.0"
atty = "^0.2.10"
rustyline = "4.0.0"
shell-words = "0.1.0"
eaglesong = "0.1"
regex = "1.1.6"
dirs = "1.0.5"
url = "1.7.2"
log = "0.4.6"
chrono = "0.4"
rpassword = "3.0.2"
ipnetwork = "0.14"
multiaddr = { package = "parity-multiaddr", version = "0.4.0" }
byteorder = "1.3.2"
itertools = "0.8.0"

tokio = { version = "1", features = ["net", "io-util", "rt"] }
futures = "0.3"

[target.'cfg(unix)'.dependencies]
tui = "0.6.0"
termion = "1.5"

[build-dependencies]
ckb-build-info = "=0.100.0-rc5"

[workspace]
members = ["ckb-sdk", "ckb-index", "ckb-sdk-types", "plugin-protocol"]
