[package]
name = "ckb-cli"
version = "1.6.0"
license = "MIT"
authors = ["Linfeng Qian <thewawar@gmail.com>", "Nervos Core Dev <dev@nervos.org>"]
edition = "2021"
description = "ckb command line interface"

[dependencies]
ckb-jsonrpc-types = "=0.114.0-rc1"
ckb-hash = "=0.114.0-rc1"
ckb-crypto = { version = "=0.114.0-rc1", features = ["secp"] }
ckb-build-info = "=0.114.0-rc1"
ckb-types = "=0.114.0-rc1"
ckb-util = "=0.114.0-rc1"
ckb-error = "=0.114.0-rc1"
ckb-script = "=0.114.0-rc1"
ckb-chain-spec = "=0.114.0-rc1"
ckb-mock-tx-types = { git="https://github.com/eval-exec/ckb-standalone-debugger", branch="exec/bump-0.114.0" }
ckb-sdk = { git = "https://github.com/eval-exec/ckb-sdk-rust", branch="exec/0.114",features = ["native-tls-vendored"] }
ckb-signer = { path = "ckb-signer", version = "0.4.0" }
plugin-protocol = { path = "plugin-protocol", package = "ckb-cli-plugin-protocol", version = "=1.3.0" }
jsonrpc-core-client = "18"
jsonrpc-core = "18"
jsonrpc-derive = "18"
jsonrpc-http-server = "18"
jsonrpc-server-utils = "18"
secp256k1 = { version = "0.24", features = ["recovery"] }
bitcoin = "0.29"
faster-hex = "0.6"
env_logger = "0.6"
crossbeam-channel = "0.5.8"
clap = "=3.0.0-beta.1"
clap_generate = "=3.0.0-beta.1"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
serde_yaml = "0.8.23"
yaml-rust = "0.4.3"
dtoa = "0.4"
ansi_term = "^0.11.0"
colored = "^1.6.0"
atty = "^0.2.10"
anyhow = "1.0.63"
console = "0.15.0"
ctrlc = "3.2.3"
rustyline = "~8.0.0"
rustyline-derive = "0.4.0"
shell-words = "0.1.0"
eaglesong = "0.1"
regex = "1.1.6"
dirs = "1.0.5"
url = "1.7.2"
log = "0.4.6"
chrono = "0.4"
rpassword = "3.0.2"
ipnetwork = "0.14"
multiaddr = { package = "parity-multiaddr", version = "0.4.0" }
byteorder = "1.3.2"
toml = "0.5.9"

tokio = { version = "1", features = ["net", "io-util", "rt"] }
futures = "0.3"

# remove this line when ckb-vm stick the version of ckb-vm-definitions
ckb-vm-definitions = "=0.21.3"

[target.'cfg(unix)'.dependencies]
tui = "0.6.0"
termion = "1.5"

[dev-dependencies]
rand = "0.7"

[build-dependencies]
ckb-build-info = "=0.114.0-rc1"

[workspace]
members = ["ckb-signer", "plugin-protocol"]
