[package]
name = "ckb-index"
version = "0.101.0"
authors = ["Linfeng Qian <thewawar@gmail.com>", "Nervos Core Dev <dev@nervos.org>"]
edition = "2018"
license = "MIT"
description = "ckb-cli index database"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
bincode = "1.1.4"
log = "0.4.6"
failure = "0.1.5"
ckb-types = "=0.101.0"
ckb-sdk = { path = "../ckb-sdk", version = "=0.101.0" }
rocksdb = { package = "ckb-rocksdb", version = "=0.16.1", features = ["snappy"] }
