[package]
name = "ckb-index"
version = "0.101.4"
authors = ["Linfeng Qian <thewawar@gmail.com>", "Nervos Core Dev <dev@nervos.org>"]
edition = "2021"
license = "MIT"
description = "ckb-cli index database"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
bincode = "1.1.4"
log = "0.4.6"
failure = "0.1.5"
ckb-types = "=0.101.4"
# ckb-sdk = { git = "https://github.com/TheWaWaR/ckb-sdk.git" }
ckb-sdk = { path = "/home/weet/projects/thewawar/ckb-sdk" }
rocksdb = { package = "ckb-rocksdb", version = "=0.16.1", features = ["snappy"] }
