[package]
name = "ckb-index"
version = "1.0.0"
authors = ["Linfeng Qian <thewawar@gmail.com>", "Nervos Core Dev <dev@nervos.org>"]
edition = "2021"
license = "MIT"
description = "ckb-cli index database"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
bincode = "1.1.4"
log = "0.4.6"
thiserror = "1.0.31"
ckb-types = "=0.103.0"
ckb-sdk = "1.0.0"
rocksdb = { package = "ckb-rocksdb", version = "=0.16.1", features = ["snappy"] }
