[package]
name = "ckb-sdk-types"
version = "0.100.0-rc5"
authors = ["Linfeng Qian <thewawar@gmail.com>", "Nervos Core Dev <dev@nervos.org>"]
edition = "2018"
license = "MIT"
description = "ckb-cli sdk common types"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"

ckb-types = "=0.100.0-rc5"
ckb-traits = "=0.100.0-rc5"
ckb-jsonrpc-types = "=0.100.0-rc5"
ckb-hash = "=0.100.0-rc5"
ckb-error = "=0.100.0-rc5"

[dev-dependencies]
ckb-crypto = { version = "=0.100.0-rc5", features = ["secp"] }
