[package]
name = "ckb-sdk-types"
version = "0.101.0"
authors = ["Linfeng Qian <thewawar@gmail.com>", "Nervos Core Dev <dev@nervos.org>"]
edition = "2018"
license = "MIT"
description = "ckb-cli sdk common types"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"

ckb-types = "=0.101.0"
ckb-traits = "=0.101.0"
ckb-jsonrpc-types = "=0.101.0"
ckb-hash = "=0.101.0"
ckb-error = "=0.101.0"

[dev-dependencies]
ckb-crypto = { version = "=0.101.0", features = ["secp"] }
