[package]
name = "ckb-sdk-types"
version = "0.101.3"
authors = ["Linfeng Qian <thewawar@gmail.com>", "Nervos Core Dev <dev@nervos.org>"]
edition = "2018"
license = "MIT"
description = "ckb-cli sdk common types"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"

ckb-types = "=0.101.3"
ckb-traits = "=0.101.3"
ckb-jsonrpc-types = "=0.101.3"
ckb-hash = "=0.101.3"
ckb-error = "=0.101.3"

[dev-dependencies]
ckb-crypto = { version = "=0.101.3", features = ["secp"] }
