[package]
name = "ckb-sdk"
version = "0.35.0"
authors = ["Linfeng Qian <thewawar@gmail.com>", "Nervos Core Dev <dev@nervos.org>"]
edition = "2018"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["rc"] }
serde_derive = "1.0"
serde_json = "1.0"
bech32 = "0.6.0"
log = "0.4.6"
reqwest = "0.9"
secp256k1 = "0.17.0"
faster-hex = "0.4"
fnv = "1.0.3"
aes-ctr = "0.3.0"
scrypt = "0.2.0"
rand = "0.6.5"
tiny-keccak = "1.4"
byteorder = "1.3.2"
bitcoin_hashes = "0.3.2"
uuid = { version = "0.7.4", features = ["v4"] }
chrono = "0.4.6"
failure = "0.1.5"

ckb-types = { git = "https://github.com/nervosnetwork/ckb", tag = "v0.35.0-rc1" }
ckb-script = { git = "https://github.com/nervosnetwork/ckb", tag = "v0.35.0-rc1" }
ckb-jsonrpc-types = { git = "https://github.com/nervosnetwork/ckb", tag = "v0.35.0-rc1" }
ckb-hash = { git = "https://github.com/nervosnetwork/ckb", tag = "v0.35.0-rc1" }
ckb-resource = { git = "https://github.com/nervosnetwork/ckb", tag = "v0.35.0-rc1" }
ckb-crypto = { git = "https://github.com/nervosnetwork/ckb", tag = "v0.35.0-rc1", features = ["secp"] }
ckb-sdk-types = { path = "../ckb-sdk-types" }
