[package]
name = "ckb-sdk"
version = "0.42.1"
authors = ["Linfeng Qian <thewawar@gmail.com>", "Nervos Core Dev <dev@nervos.org>"]
edition = "2018"
license = "MIT"
description = "ckb-cli sdk"

[dependencies]
serde = { version = "1.0", features = ["rc"] }
serde_derive = "1.0"
serde_json = "1.0"
bech32 = "0.6.0"
log = "0.4.6"
reqwest = { version = "0.11", features = ["json", "blocking"] }
secp256k1 = { version = "0.19", features = ["recovery"] }
faster-hex = "0.4"
fnv = "1.0.3"
aes-ctr = "0.6.0"
scrypt = "0.2.0"
rand = "0.6.5"
tiny-keccak = "1.4"
byteorder = "1.3.2"
bitcoin_hashes = "0.3.2"
uuid = { version = "0.7.4", features = ["v4"] }
chrono = "0.4.6"
failure = "0.1.5"
tokio-util = { version = "0.6", features = ["codec"] }
tokio = { version = "1" }
bytes = "1"
futures = "0.3"

ckb-types = "=0.42.0"
ckb-error = "=0.42.0"
ckb-script = "=0.42.0"
ckb-jsonrpc-types = "=0.42.0"
ckb-hash = "=0.42.0"
ckb-resource = "=0.42.0"
ckb-crypto = { version = "=0.42.0", features = ["secp"] }
ckb-sdk-types = { path = "../ckb-sdk-types", version="=0.42.1" }

[dev-dependencies]
hex = "0.4"
