[package]
name = "ckb-signer"
version = "0.4.0"
edition = "2021"
license = "MIT"
description = "Signer SDK for Nervos CKB"
homepage = "https://github.com/nervosnetwork/ckb-cli"
repository = "https://github.com/nervosnetwork/ckb-cli"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
secp256k1 = { version = "0.24", features = ["recovery"] }
faster-hex = "0.6"
aes-ctr = "0.6.0"
scrypt = "0.2.0"
rand = "0.7.3"
tiny-keccak = "1.4"
uuid = { version = "0.7.4", features = ["v4"] }
bitcoin = "0.29"
chrono = "0.4"
thiserror = "1.0.30"
parking_lot = "0.11"
anyhow = "1.0.63"

ckb-types = "=0.114.0-rc1"
ckb-hash = "=0.114.0-rc1"
ckb-crypto = { version = "=0.114.0-rc1", features = ["secp"] }
ckb-sdk = { git = "https://github.com/eval-exec/ckb-sdk-rust", branch="exec/0.114",features = ["native-tls-vendored"] }
