[package]
name = "ckb-cli-plugin-protocol"
version = "1.3.0"
authors = ["Nervos Core Dev <dev@nervos.org>"]
edition = "2021"
license = "MIT"
description = "ckb-cli plugin protocol"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ckb-types = "=0.114.0-rc1"
ckb-jsonrpc-types = "=0.114.0-rc1"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
faster-hex = "0.6"
