[package]
name = "cli-test"
version = "0.103.0"
authors = ["Linfeng Qian <thewawar@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.1"
tempfile = "3.0"
log = "0.4"
env_logger = "0.6"
toml = "0.5.0"
serde_yaml = "0.8.9"
ckb-sdk = { git = "https://github.com/cryptape/ckb-sdk-rust.git" }
ckb-types = "=0.103.0"
ckb-app-config = "=0.103.0"
ckb-chain-spec = "=0.103.0"
regex = "1.1.6"

# Prevent this from interfering with workspaces
[workspace]
members = ["."]
