[package]
name = "ckb-cli-test"
version = "1.0.0"
authors = ["Linfeng Qian <thewawar@gmail.com>"]
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.1"
tempfile = "3.0"
log = "0.4"
env_logger = "0.6"
toml = "0.5.0"
serde_yaml = "0.8.9"
ckb-sdk = "3.0.0"
serde_json = "1.0"
ckb-types = "=0.114.0-rc1"
ckb-jsonrpc-types = "=0.114.0-rc1"
ckb-app-config = "=0.114.0-rc1"
ckb-chain-spec = "=0.114.0-rc1"
regex = "1.1.6"
faster-hex = "0.6"

# Prevent this from interfering with workspaces
[workspace]
members = ["."]
